[package]
name = "abft"
version = "0.1.0"
authors = ["Henrik Knudsen <henrik@knudsenhome.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
bincode = "1.3"
consensus-core = {path = "../consensus-core"}
futures = "0.3"
log = "0.4"
env_logger = "0.8.3"
num-traits = "0.2"
num-derive = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1.2", features = ["full"]}
thiserror = "1.0"
