[package]
name = "abft"
version = "0.1.0"
authors = ["Henrik Knudsen <henrik@knudsenhome.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]


# Bin
clap = "2.33"
tonic = "0.4"
prost = "0.7"
futures-core = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"



# Lib
async-trait = "0.1.42"
bincode = "1.3"
consensus-core = {path = "../consensus-core"}
futures = "0.3"
log = "0.4"
env_logger = "0.8.3"
num-traits = "0.2"
num-derive = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1.2", features = ["full"]}
thiserror = "1.0"


[build-dependencies]
tonic-build = "0.4"