[package]
name = "abft"
version = "0.1.0"
authors = ["Henrik Knudsen <henrik@knudsenhome.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]


# Bin
clap = "2.33.3"
tonic = "0.4.3"
prost = "0.7.0"
rand = "0.8.3"



# Lib
async-trait = "0.1.50"
bincode = "1.3.3"
byteorder = "1.4.3"
consensus-core = {path = "../consensus-core", features=["encrypt-dalek-precomputed", "commoncoin-dalek-precomputed", "sign-ecdsa"]}
curve25519-dalek = {version = "3.1.0", default-features=false,  features = ["std", "simd_backend"]}
futures = "0.3.15"
log = "0.4.14"
log4rs = "1.0.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
serde = { version = "1.0.126", features = ["derive"] }
tokio = {version = "1.6.0", features = ["macros", "rt-multi-thread", "sync", "parking_lot"]}
thiserror = "1.0.24"

[dev-dependencies]
env_logger = "0.8.3"

[build-dependencies]
tonic-build = "0.4.2"
env_logger = "0.8.3"

[profile.release]
lto=true