[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
criterion = {version = "0.3", features = ["async_tokio", "html_reports"]}
curve25519-dalek = {version = "3.1.0", default-features=false,  features = ["std", "simd_backend"]}
consensus-core = {path = "../consensus-core"}
abft = {path = "../abft"}
tokio = {version = "1.2", features = ["full"]}
futures = "0.3"
log = "0.4"
env_logger = "0.8.3"
threshold_crypto = "0.4"
rand = "0.7"
bincode = "1.3"

[build]
rustflags = ["target-cpu=native", "target-feature=+aes,+sse2,+sse4.1,+ssse3,+avx512ifma,+avx2"]   


[[bench]]
name = "sign"
path = "sign.rs"
harness = false



[[bench]]
name = "encrypt"
path = "encrypt.rs"
harness = false

[[bench]]
name = "commoncoin"
path = "commoncoin.rs"
harness = false

[[bench]]
name = "erasure"
path = "erasure.rs"
harness = false

[[bench]]
name = "aes"
path = "aes.rs"
harness = false

[[bench]]
name = "prbc"
path = "prbc.rs"
harness = false

[[bench]]
name = "acs"
path = "acs.rs"
harness = false

[[bench]]
name = "mvba"
path = "mvba.rs"
harness = false

[[bench]]
name = "abft"
path = "abft.rs"
harness = false

[[bench]]
name = "dalek"
path = "dalek.rs"
harness = false