[package]
name = "consensus-core"
version = "0.1.0"
authors = ["Henrik Knudsen <henrik@knudsenhome.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
openssl = "0.10"
p256 = {version = "0.7.2", features = ["ecdh", "pkcs8", "pem"]}
serde = { version = "1.0", features = ["derive"] }
tiny-keccak = { version = "2.0", features = ["sha3"] }
rand_core = {version = "0.5", features = ["getrandom"]}