[package]
name = "consensus-core"
version = "0.1.0"
authors = ["Henrik Knudsen <henrik@knudsenhome.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.6"
aes-gcm = "0.8.0"
bincode = "1.3"
byteorder = "1.4.2"
libjerasure = {git = "https://github.com/Henriknu/libjerasure", branch="main" }
frost = {git = "https://github.com/Henriknu/frost", branch="main"}
hex = "0.4.2"
openssl = "0.10"
p256 = {version = "0.7.2", features = ["pkcs8", "pem", "arithmetic"]}
serde = { version = "1.0", features = ["derive"] }
tiny-keccak = { version = "2.0", features = ["sha3"] }
rand = "0.6" 
rand_core = {version = "0.5", features = ["getrandom"]}
uint = "0.9.0"
subtle = "2.4"
bls12_381 = "0.4"
threshold_crypto = "0.4"
thiserror = "1.0"


[build]
rustflags = ["target-cpu=sandybridge", "target-feature=+aes,+sse2,+sse4.1,+ssse3"]        # custom flags to pass to all compiler invocations