[package]
name = "consensus-core"
version = "0.1.0"
authors = ["Henrik Knudsen <henrik@knudsenhome.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.6"
aes-gcm = "0.8.0"
bincode = "1.3"
curve25519-dalek = {version = "3.1.0", default-features=false,  features = ["std", "serde", "simd_backend"]}
byteorder = "1.4.2"
libjerasure = {git = "https://github.com/Henriknu/libjerasure", branch="main" }
p256 = {version = "0.8.0-pre", features = ["pkcs8", "pem", "arithmetic"]}
serde = { version = "1.0", features = ["derive"] }
tiny-keccak = { version = "2.0", features = ["sha3"] }
rand = "0.7" 
rand_core = {version = "0.6", features = ["getrandom"]}
uint = "0.9.0"
threshold_crypto = "0.4"
thiserror = "1.0"
flate2 = "1.0.20"

[features]
encrypt-p256 = []
encrypt-dalek = []
encrypt-dalek-precomputed = []

commoncoin-p256 = []
commoncoin-dalek-precomputed = []

sign-ecdsa = []

[profile.release]
lto=true